# moocore

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  COPYRIGHTS  DEVEL-README.md  Makefile  README.md  TODO  TODO-hv  TODO-regtest  bibkeys.txt  codecov.yml  index.html  moocore-0.1.0-py3-none-macosx_10_9_universal2.whl  moocore-0.1.0-py3-none-macosx_10_9_x86_64.whl  moocore-0.1.0-py3-none-macosx_11_0_arm64.whl  moocore-0.1.0-py3-none-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  moocore-0.1.0-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  moocore-0.1.0-py3-none-musllinux_1_1_x86_64.whl  moocore-0.1.0-py3-none-win_amd64.whl  moocore-0.1.3.dev0-py3-none-macosx_10_9_universal2.whl  moocore-0.1.3.dev0-py3-none-macosx_10_9_x86_64.whl  moocore-0.1.3.dev0-py3-none-macosx_11_0_arm64.whl  moocore-0.1.3.dev0-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  moocore-0.1.3.dev0-py3-none-musllinux_1_1_x86_64.whl  moocore-0.1.3.dev0-py3-none-win_amd64.whl  moocore-0.1.5.dev0-py3-none-macosx_10_9_universal2.whl  moocore-0.1.5.dev0-py3-none-macosx_10_9_x86_64.whl  moocore-0.1.5.dev0-py3-none-macosx_11_0_arm64.whl  moocore-0.1.5.dev0-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  moocore-0.1.5.dev0-py3-none-musllinux_1_1_x86_64.whl  moocore-0.1.5.dev0-py3-none-musllinux_1_2_x86_64.whl  moocore-0.1.5.dev0-py3-none-win_amd64.whl  moocore-0.1.6-py3-none-macosx_10_9_universal2.whl  moocore-0.1.6-py3-none-macosx_10_9_x86_64.whl  moocore-0.1.6-py3-none-macosx_11_0_arm64.whl  moocore-0.1.6-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  moocore-0.1.6-py3-none-musllinux_1_2_x86_64.whl  moocore-0.1.6-py3-none-win_amd64.whl  (+56 more)
c/: .gitignore  Hypervolume_MEX.c  Makefile  Makevars.in  NEWS.md  README.md  avl.c  avl.h  avl_tiny.h  bit_array.h  cmdline.c  cmdline.h  common.h  config.h  configure  configure.ac  cvector.h  dominatedsets.c  eaf.c  eaf.h  eaf3d.c  eaf_main.c  eafdiff.c  epsilon.c  epsilon.h  gcc.mk  gcc_attribs.h  gitversion.mk  hv.c  hv.h  hv3d_priv.h  hv3dplus.c  hv4d.c  hv4d_priv.h  hv_contrib.c  hv_priv.h  hvapprox.c  hvapprox.h  hvc3d.c  hvc4d_priv.h  (+32 more)
c/mt19937/: LICENSE.md  mt19937.c  mt19937.h
python/: .buildinfo  .gitattributes  .gitignore  COPYRIGHTS  Makefile  README.md  c_coverage.xml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements_dev.txt  search.html  searchindex.js  setup.py  sg_execution_times.html  tox.ini
python/_downloads/2bde5214febb6ecdf0a91b5e94199d9d/: plot_metrics.py
python/_downloads/2fbe8cf3ef4102ad97406cc07d2a6f29/: plot_hv_approx.py
python/_downloads/339ba59fb9b11b688b68677ff57a7916/: plot_generate.ipynb
python/_downloads/6dbc9c72e5bcee6ee20893a598dd3724/: plot_metrics.ipynb
python/_downloads/8115a2c128454f4aef349ea70661df09/: plot_generate.py
python/_downloads/ad1d58a778168aec3ede52cdb6d74f3c/: plot_eaf.ipynb
python/_downloads/bdb54b28125cf077123c3387cba604c4/: plot_pandas.py
python/_downloads/cbf47a8044949c8985f5b549e4bc3831/: plot_hv_approx.ipynb
python/_downloads/ef16cd3191aa01445a1a0c445e3109ea/: plot_pandas.ipynb
python/_modules/: index.html
python/_modules/moocore/: _datasets.html  _moocore.html
python/_sources/: index.rst.txt  sg_execution_times.rst.txt
python/_sources/auto_examples/: index.rst.txt  plot_eaf.rst.txt  plot_generate.rst.txt  plot_hv_approx.rst.txt  plot_metrics.rst.txt  plot_pandas.rst.txt  sg_execution_times.rst.txt
python/_sources/contribute/: index.rst.txt
python/_sources/examples/: index.rst.txt
python/_sources/reference/: functions.dominance.rst.txt  functions.eaf.rst.txt  functions.io.rst.txt  functions.metrics.rst.txt  functions.rst.txt  index.rst.txt
python/_sources/whatsnew/: index.rst.txt
python/_static/: copybutton.js  documentation_options.js
python/auto_examples/: index.html  plot_eaf.html  plot_generate.html  plot_hv_approx.html  plot_metrics.html  plot_pandas.html  sg_execution_times.html
python/benchmarks/: README.md  bench.py  bench_epsilon.py  bench_hv.py  bench_hvapprox.py  bench_igdplus.py  bench_ndom.py  bench_ndsort.py  python-requirements.txt
python/contribute/: index.html
python/doc/: Makefile  conftest.py
python/doc/source/: REFERENCES.bib  benchmarks.inc.rst  conf.py  index.rst  my_unsrt_style.py  super_with_brackets.py
python/doc/source/_static/css/: custom.css
python/doc/source/_templates/autosummary/: class.rst  function.rst
python/doc/source/contribute/: index.rst
python/doc/source/examples/: metrics.md
python/doc/source/reference/: functions.dominance.rst  functions.eaf.rst  functions.io.rst  functions.metrics.rst  functions.rst  index.rst
python/doc/source/whatsnew/: index.rst
python/examples/: README.rst  index.html  metrics.html  plot_eaf.py  plot_generate.py  plot_hv_approx.py  plot_metrics.py  plot_pandas.py
python/reference/: functions.dominance.html  functions.eaf.html  functions.html  functions.io.html  functions.metrics.html  index.html
python/src/: conftest.py
python/src/moocore/: __init__.py  _archive.py  _datasets.py  _docsubstitute.py  _ffi_build.py  _moocore.py  _utils.py  libmoocore.h
python/src/moocore/data/: CPFs.txt  CPFs.txt.xz  ran.10pts.9d.10  spherical-250-10-3d.txt.xz  tpls50x20_1_MWT.csv  uniform-250-10-3d.txt.xz  wrots_l100w10_dat.xz  wrots_l10w100_dat.xz
python/tests/: conftest.py  test_archive.py  test_bugs.py  test_coverage.py  test_dim1_metrics.py  test_dimension_limits.py  test_immutability.py  test_moocore.py  test_pandas.py
python/tests/helpers/: immutability.py
python/tests/test_data/: 100_diff_points_1.txt  100_diff_points_2.txt  wrots_l100w10_dat  wrots_l10w100_dat
python/tests/test_data/expected_output/: R_generate_expected_output.R
python/tests/test_data/expected_output/eaf/: ALG_1_dat_eaf.txt  ALG_1_dat_eaf.txt.xz  dat1_eaf.txt  pct_ALG_1_dat_eaf.txt  pct_ALG_1_dat_eaf.txt.xz  pct_dat1_eaf.txt  pct_spherical_eaf.txt  pct_spherical_eaf.txt.xz  pct_uniform_eaf.txt  pct_uniform_eaf.txt.xz  pct_wrots_l100_eaf.txt  pct_wrots_l100_eaf.txt.xz  pct_wrots_l10_eaf.txt  spherical_eaf.txt  (+8 more)
python/whatsnew/: index.html
(+406 files in other folders)
